@@ -1,3 +1,8 @@
+2005-10-31  Mark Kettenis  <kettenis@gnu.org>
+
+	* floatformat.c (floatformat_vax_aingle, floatformat_vax_double):
+	New variables.
+
 2005-10-07  Mark Mitchell  <mark@codesourcery.com>
 
 	* at-file.texi: Fix typo.
